<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/colinabo_IV"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_colinabo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/helmet_IV"/>

        <TextView
            android:id="@+id/colinabTitle_TV"
            android:gravity="start"
            android:textAlignment="gravity"
            android:text="@string/kohlrabi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/colinabo_IV"
            app:layout_constraintBottom_toTopOf="@id/colinaboEffect_TV"
            />
        <TextView
            android:id="@+id/colinaboEffect_TV"
            android:text="@string/eating_this_marvellous_vegetable_will_heal_you_for_2_points"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/colinabTitle_TV"
            app:layout_constraintBottom_toBottomOf="@id/colinabo_IV"
            />
        <ImageView
            android:id="@+id/helmet_IV"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/helmet_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/colinabo_IV"
            app:layout_constraintBottom_toTopOf="@id/energy_IV"/>

        <TextView
            android:id="@+id/helmetTitle_TV"
            android:gravity="start"
            android:textAlignment="gravity"
            android:text="@string/helmet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/helmet_IV"
            app:layout_constraintBottom_toTopOf="@id/helmetEffect_TV"
            />
        <TextView
            android:id="@+id/helmetEffect_TV"
            android:text="@string/will_protect_you_in_case_of_being_hit"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/helmetTitle_TV"
            app:layout_constraintBottom_toBottomOf="@id/helmet_IV"
            />
        <ImageView
            android:id="@+id/energy_IV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/energy_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/helmet_IV"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/energyTitle_TV"
            android:gravity="start"
            android:textAlignment="gravity"
            android:text="@string/enery_drink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/energy_IV"
            app:layout_constraintBottom_toTopOf="@id/energyEffect_TV"
            />
        <TextView
            android:id="@+id/energyEffect_TV"
            android:text="@string/will_energize_you_and_while_energized_you_will_move_faster"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/energyTitle_TV"
            app:layout_constraintBottom_toBottomOf="@id/energy_IV"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.31" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>